crates/ir/tests/ir/snapshots/main__ir__lower__stdlib__map_immutable.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module stdlib__map_immutable

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[i4]) -> Option[i4]
import core/list/sort_by as sort_by(List[n6], (n6) -> c6) -> List[n6]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[a12]) -> List[a12]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/map/empty as empty() -> Map[e10, f10]
import core/map/put as put(Map[w10, x10], w10, x10) -> Map[w10, x10]
import core/map/put as put(~MapBuilder[g11, h11], g11, h11) -> ~MapBuilder[g11, h11]
import core/map/contains as contains(Map[p12, q12], p12) -> Bool
declare contains: (Map[p12, q12], p12) -> Bool
declare empty: () -> Map[e10, f10]
declare println: (g) -> Unit
declare put: (Map[w10, x10], w10, x10) -> Map[w10, x10]

fn main() -> Unit =
  let v0: Map[d13, e13] = call empty()
  let v2: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
  let v3: Dict[core/hash.Hash, String] = get_dict core/hash.Hash[String]
  let v1: Map[String, Int] = call put(v2, v3, v0, "x", 1)
  let v4: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
  let v5: Dict[core/hash.Hash, String] = get_dict core/hash.Hash[String]
  let v6: Bool = call contains(v4, v5, v0, "x")
  let v7: Dict[core/show.Show, Bool] = get_dict core/show.Show[Bool]
  let v8: Unit = call println(v7, v6)
  let v10: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
  let v11: Dict[core/hash.Hash, String] = get_dict core/hash.Hash[String]
  let v12: Bool = call contains(v10, v11, v1, "x")
  let v9: Dict[core/show.Show, Bool] = get_dict core/show.Show[Bool]
  let v13: Unit = call println(v9, v12)
  v13
