crates/ir/tests/ir/snapshots/main__ir__lower__stdlib__map_operations.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module stdlib__map_operations

import core/peek/peek as peek(e) -> e
import core/list/last as last(List[r3]) -> Option[r3]
import core/list/sort_by as sort_by(List[w5], (w5) -> l5) -> List[w5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[z7]) -> List[z7]
import core/io/println as println(h) -> Unit
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
import core/map/empty as empty() -> Map[b9, c9]
import core/map/put as put(Map[f9, g9], f9, g9) -> Map[f9, g9]
import core/map/delete as delete(Map[c10, d10], c10) -> Map[c10, d10]
import core/map/contains as contains(Map[k10, l10], k10) -> Bool
import core/map/size as size(Map[g13, h13]) -> Int
declare contains: (Map[k10, l10], k10) -> Bool
declare delete: (Map[c10, d10], c10) -> Map[c10, d10]
declare empty: () -> Map[b9, c9]
declare println: (h) -> Unit
declare put: (Map[f9, g9], f9, g9) -> Map[f9, g9]
declare size: (Map[g13, h13]) -> Int

fn main() -> Unit =
  let v1: Map[String, Int] = call empty()
  let v2: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
  let v3: Dict[core/hash.Hash, String] = get_dict core/hash.Hash[String]
  let v4: Map[String, Int] = call put(v2, v3, v1, "a", 10)
  let v5: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
  let v6: Dict[core/hash.Hash, String] = get_dict core/hash.Hash[String]
  let v0: Map[String, Int] = call put(v5, v6, v4, "b", 11)
  let v7: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
  let v8: Dict[core/hash.Hash, String] = get_dict core/hash.Hash[String]
  let v9: Bool = call contains(v7, v8, v0, "a")
  let v10: Dict[core/show.Show, Bool] = get_dict core/show.Show[Bool]
  let v11: Unit = call println(v10, v9)
  let v13: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
  let v14: Dict[core/hash.Hash, String] = get_dict core/hash.Hash[String]
  let v12: Map[String, Int] = call delete(v13, v14, v0, "a")
  let v15: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
  let v16: Dict[core/hash.Hash, String] = get_dict core/hash.Hash[String]
  let v17: Bool = call contains(v15, v16, v12, "a")
  let v18: Dict[core/show.Show, Bool] = get_dict core/show.Show[Bool]
  let v19: Unit = call println(v18, v17)
  let v21: Int = call size(v0)
  let v20: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v22: Unit = call println(v20, v21)
  v22
