crates/ir/tests/ir/snapshots/main__ir__lower__stdlib__multi_ord_constraint.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module stdlib__multi_ord_constraint

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[f3]) -> Option[f3]
import core/list/sort_by as sort_by(List[k5], (k5) -> z4) -> List[k5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], u1, (u1, t1) -> u1) -> u1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[q10]) -> List[q10]
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/io/println as println(g) -> Unit
declare println: (g) -> Unit

fn both_less(v0: Dict[core/ord.Ord, c11], v1: Dict[core/ord.Ord, d11], v2: c11, v3: c11, v4: d11, v5: d11) -> Bool =
  let_join v13(v6: Bool) =
    let_join v12(v8: Bool) =
      let_join v11(v10: Bool) =
        if v10 {
          v8
        } else {
          false
        }
      in
      jump v11(v6)
    in
    let v9: Bool = trait_call core/ord.Ord.lt(v1, v4, v5)
    jump v12(v9)
  in
  let v7: Bool = trait_call core/ord.Ord.lt(v0, v2, v3)
  jump v13(v7)

fn main() -> Unit =
  let v15: Dict[core/ord.Ord, Int] = get_dict core/ord.Ord[Int]
  let v16: Dict[core/ord.Ord, Float] = get_dict core/ord.Ord[Float]
  let v17: Bool = call both_less(v15, v16, 1, 2, 3.0, 4.0)
  let v18: Dict[core/show.Show, Bool] = get_dict core/show.Show[Bool]
  let v19: String = trait_call core/show.Show.show(v18, v17)
  let v14: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v20: Unit = call println(v14, v19)
  v20
