crates/ir/tests/ir/snapshots/main__ir__lower__stdlib__never_intrinsics.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module stdlib__never_intrinsics

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare panic
declare todo
declare unreachable

fn panic_in_if(v0: Bool) -> Int =
  if v0 {
    42
  } else {
    let v1: Never = call panic("oops")
    v1
  }

fn todo_stub() -> Int =
  let v2: Never = call todo("tbd")
  v2

fn unreachable_branch(v3: Int) -> String =
  let_join v8(v6: Bool) =
    if v6 {
      "positive"
    } else {
      let v7: Never = call unreachable("negative not supported")
      v7
    }
  in
  let v4: Dict[core/ord.Ord, Int] = get_dict core/ord.Ord[Int]
  let v5: Bool = trait_call core/ord.Ord.lt(v4, 0, v3)
  jump v8(v5)
