crates/ir/tests/ir/snapshots/main__ir__lower__stdlib__never_type.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module stdlib__never_type

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[p3]) -> Option[p3]
import core/list/sort_by as sort_by(List[u5], (u5) -> j5) -> List[u5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], u1, (u1, s1) -> u1) -> u1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[w7]) -> List[w7]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare panic

fn absurd(v0: Never) -> Never =
  ()

fn diverge_into_int() -> Int =
  let v1: Never = call panic("oops")
  v1

fn if_with_panic(v2: Bool) -> Int =
  if v2 {
    42
  } else {
    let v3: Never = call panic("oops")
    v3
  }

fn option_never(v4: Option[Never]) -> Int =
  switch v4 {
    1 ->
      0
  }

fn fn_returning_never(v5: (String) -> Never) -> (String) -> Never =
  v5

fn own_never(v6: ~Never) -> ~Never =
  v6

fn user_empty_sum_coerces() -> Int =
  let v7: Never = call panic("custom")
  v7
