crates/ir/tests/ir/snapshots/main__ir__lower__stdlib__platform_extern.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module stdlib__platform_extern

extern java "java.lang.Math" abs(Int) -> Int
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[p3]) -> Option[p3]
import core/list/sort_by as sort_by(List[u5], (u5) -> j5) -> List[u5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], u1, (u1, s1) -> u1) -> u1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[x7]) -> List[x7]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare abs: (Int) -> Int
declare println: (g) -> Unit

fn main() -> Unit =
  let v1: Int = neg_int(42)
  let v2: Int = call abs(v1)
  let v3: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v4: String = trait_call core/show.Show.show(v3, v2)
  let v0: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v5: Unit = call println(v0, v4)
  v5
